# cratere

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: lint.yml  mypy.yml  pytest.yml
crataceous/: __init__.py  __main__.py
cratere/: __init__.py  cache.py  index.py  logger.py  search.py  settings.py
src/cratere/: __init__.py  __main__.py  index.py  search.py  settings.py
src/tests/: test_cache.py  test_settings.py
tests/: test_cache.py  test_settings.py
