[tool.poetry]
name = "cratere"
version = "0.1.0"
description = "Caching proxy for crates.io"
authors = ["Thomas Cellerier <thomas.cellerier@appgate.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pydantic = "^1.9.2"
fastapi = "^0.79.1"
hypercorn = "^0.13.2"
acron = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[tool.poetry.scripts]
check = "build:check"
fmt = "build:fmt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
