[project]
name = "cratere"
version = "0.2.0"
description = "Caching proxy for crates.io"
authors = [
  {name = "Thomas Cellerier", email = "thomas.cellerier@appgate.com"}
]
requires-python = ">=3.12"
dependencies = [
    "acron>=0.2.1",
    "anyio>=4.6.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "hypercorn>=0.17.3",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
]


[project.license]
text = "MIT"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]
